[tool.poetry]
name = "engine"
version = "0.1.0"
description = "Engine service"
authors = ["Dmytro Maior <mayor4090@gmail.com>"]
readme = "README.md"
packages = [
    {include = "*", from = "engine"},
    {include = "*", from = "tests"},
]

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.0.287"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
pytest = "^7.4.2"
pre-commit = "^3.4.0"
mypy = "^1.5.1"
requests = "^2.31.0"
types-requests = "^2.31.0.4"
tenacity = "^8.2.3"

[tool.ruff]
select = ["E", "F", "B", "W"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
